--- a/src/index.css
+++ b/src/index.css
@@ -55,10 +55,11 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-4);
+  background: var(--clr-grey-10 )!important;
+  color: var(--clr-grey-4) !important;
   line-height: 1.5;
   font-size: 0.875rem;
+ 
 }
 ul {
   list-style-type: none;
@@ -130,7 +131,7 @@ p {
   }
 }
 .btn {
-  background: var(--clr-primary-5);
+  background: var(--clr-primary-5)!important;;
   display: inline-block;
   padding: 0.25rem 0.5rem;
   border-radius: var(--radius);
